# faultline

./: .gitignore  FAULTLINE_BLUEPRINT.md  LICENSE  Makefile  README.md  SUBMISSION_STATE.md  pyproject.toml
.github/workflows/: faultline-gate.yml  publish.yml
action/: README.md  action.yml
docs/: README.md  TEAM_WORKPLAN.md
examples/mcp_research/: README.md  __init__.py  agent.py  demo.py  server.py
examples/support_bot/: agent.py  backend.py  faultline.yaml  naive_agent.py  scenarios.yaml  tools.py  vulnerable_agent.py
examples/trip_planner/: README.md  agent.py  backend.py  faultline.yaml  naive_agent.py  scenarios.yaml  tools.py
schemas/: attack_plan.schema.json  dossier.schema.json  fault_schedule.schema.json  run_record.schema.json
src/faultline/: __init__.py  cli.py  config.py
src/faultline/faults/: library.py  scheduler.py
src/faultline/gate/: anticheat.py  gatekeeper.py  golden.py
src/faultline/harden/: codex_loop.py  dossier.py  patch_result.schema.json
src/faultline/harden/prompts/: hardener_prompt.md
src/faultline/intercept/: faults_llm.py  llm_proxy.py  mcp_proxy.py
src/faultline/intercept/adapters/: langgraph.py  openai_agents.py
src/faultline/judge/: detectors.py  judge.py  rubric.py
src/faultline/ledger/: store.py
src/faultline/ledger/report/: render.py
src/faultline/plan/: planner.py  repo_digest.py
src/faultline/run/: budgets.py  gauntlet.py  sandbox.py
src/faultline/score/: curves.py  frontier.py  resilience.py
tests/: test_anticheat.py  test_cli_proxy.py  test_demo_fixture.py  test_detectors.py  test_dossier.py  test_e2e_offline.py  test_faults.py  test_frontier.py  test_gatekeeper.py  test_harden_baseline.py  test_hardening_reference.py  test_langgraph_adapter.py  test_live_integrations.py  test_llm_faults.py  test_llm_proxy_integration.py  test_mcp_proxy_integration.py  test_mcp_research_example.py  test_plan_steering.py  test_planner.py  test_reload.py  test_report.py  test_scheduler_determinism.py  test_scheduler_surfaces.py  test_schema_contracts.py  test_scorer.py  test_trip_planner_offline.py  vulnerable_support_agent.py
