[project]
name = "faultline"
version = "0.1.0"
description = "Chaos engineering that fixes what it breaks: inject → grade → harden (Codex) → verify → re-inject."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "openai>=1.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Only needed to *serve* the live LLM proxy; the fault core and its tests run
# without it (httpx.ASGITransport drives the app in-process). Keeps the offline
# install lean.
proxy = ["uvicorn>=0.30"]
agents = ["openai-agents>=0.18.1"]
langgraph = ["langgraph>=1.2.9", "langchain-openai>=1.3.5"]
live = [
    "uvicorn>=0.30",
    "openai-agents>=0.18.1",
    "langgraph>=1.2.9",
    "langchain-openai>=1.3.5",
]

[project.scripts]
faultline = "faultline.cli:app"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/faultline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
